--- a/budget-site-vue/.env
+++ b/budget-site-vue/.env
@@ -1,4 +1,4 @@
-VUE_APP_REMOTE_API=http://localhost:8080
+VUE_APP_REMOTE_API=https://budget-java.fly.dev
 # https://budget-java.fly.dev
 # http://localhost:8080
 
