--- a/newBudgetApp/pom.xml
+++ b/newBudgetApp/pom.xml
@@ -70,7 +70,12 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.3.7</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
