--- a/budget-site-vue/package.json
+++ b/budget-site-vue/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^3.9.1",
     "chartkick": "^4.2.0",
     "core-js": "^3.8.3",
+    "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
     "vue-apexcharts": "^1.6.2",
     "vue-chartjs": "^4.1.2",
